working on admin interface

--- a/sites-enabled/docent-learner-apache.conf
+++ b/sites-enabled/docent-learner-apache.conf
@@ -1,4 +1,4 @@
-WSGIScriptAlias /docent-learner/ /var/www/docent-learner/
+WSGIScriptAlias /docent-learner/dl/ /var/www/docent-learner/
 <Directory /var/www/>
 Require all granted
 </Directory>
