passworded admin site

--- a/sites-enabled/docent-learner-apache.conf
+++ b/sites-enabled/docent-learner-apache.conf
@@ -2,3 +2,12 @@ WSGIScriptAlias /docent-learner/dl/ /var/www/docent-learner/
 <Directory /var/www/>
 Require all granted
 </Directory>
+
+<Directory "/var/www/docent-learner/admin">
+  AuthType Basic
+  AuthName "Restricted Files"
+  AuthBasicProvider file
+  AuthUserFile  /etc/apache2/docent-learner-admin-pwfile
+  Require valid-user  
+</Directory>
+
