--- a/sites-enabled/docent-learner-apache.conf
+++ b/sites-enabled/docent-learner-apache.conf
@@ -11,3 +11,13 @@ Require all granted
   Require valid-user  
 </Directory>
 
+<Directory "/var/www/html/docent-learner/var/config">
+  AuthType Basic
+  AuthName "Restricted Files"
+  AuthBasicProvider file
+  AuthUserFile  /etc/apache2/docent-learner-admin-pwfile
+  Require valid-user  
+</Directory>
+
+
+
