--- a/sites-enabled/docent-learner-apache.conf
+++ b/sites-enabled/docent-learner-apache.conf
@@ -1,4 +1,6 @@
+# Docent-learner Apache configuration
 WSGIScriptAlias /docent-learner/dl/ /var/www/docent-learner/
+
 <Directory /var/www/>
 Require all granted
 </Directory>
